--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uni-user",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -13,7 +13,8 @@
     "prepublishOnly": "cross-env NODE_ENV=production npm run build",
     "storybook": "cross-env CSS_LOADER_EXCLUDE_NODE_MODULES=true start-storybook -p 6006",
     "build-storybook": "cross-env CSS_LOADER_EXCLUDE_NODE_MODULES=true build-storybook",
-    "deploy-storybook": "gh-pages -d storybook-static"
+    "deploy-storybook": "gh-pages -d storybook-static",
+    "semantic-release": "semantic-release"
   },
   "author": "",
   "license": "ISC",
@@ -72,7 +73,7 @@
     "react-dom": "16.8.6",
     "react-hot-loader": "4.8.0",
     "react-intl": "^3.2.3",
-    "semantic-release": "^15.13.28",
+    "semantic-release": "^17.0.2",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "^1.2.1",
     "typescript": "latest",
@@ -100,5 +101,9 @@
     "react-dom": "16.8.6",
     "lodash": "4.17.11",
     "@tarojs/taro-weapp": "1.3.14"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jeff-Tian/uni-user.git"
   }
 }
