--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 jobs:
   include:
     - stage: storybook
-      node_js: lts
+      node_js: lts/*
       deploy:
         provider: script
         skip_cleanup: true
