--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/babel-types": "7.0.7",
     "@types/mini-css-extract-plugin": "^0.9.0",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^13.7.0",
     "autoprefixer": "9.5.1",
     "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.0.5",
@@ -76,6 +77,8 @@
     "semantic-release": "^17.0.2",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "^1.2.1",
+    "ts-import-plugin": "^1.6.2",
+    "ts-loader": "^6.2.1",
     "typescript": "latest",
     "url-loader": "1.1.2",
     "webpack": "4.41.5",
