--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "phone": "2.3.10",
     "querystring": "^0.2.0",
     "ramda": "^0.26.1",
+    "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
