fix: add module to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-development",
   "description": "uni-sso component for front-end projects.",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "scripts": {
     "local": "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "dev": "cross-env webpack-dev-server ---config webpack.dev.config.js",
