--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "4.1.4"
+    "webpack-merge": "4.1.4",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
@@ -98,7 +99,7 @@
     "@tarojs/taro": "^2.0.2",
     "@tarojs/taro-h5": "^2.0.2",
     "alife-logger": "^1.8.1",
-    "antd": "3.15.2",
+    "antd": "^3.26.11",
     "antd-mobile": "2.2.11",
     "crypto-js": "3.1.9-1",
     "google-libphonenumber": "3.2.2",
