--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@storybook/addon-links": "^5.3.4",
     "@storybook/addons": "^5.3.4",
     "@storybook/react": "^5.3.4",
-    "@tarojs/taro-weapp": "1.3.14",
     "@types/babel-types": "7.0.7",
     "@types/mini-css-extract-plugin": "^0.9.0",
     "@types/mocha": "^5.2.7",
@@ -95,9 +94,6 @@
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "@jeff-tian/sleep": "^1.0.0",
-    "@tarojs/redux": "^2.0.2",
-    "@tarojs/taro": "^2.0.2",
-    "@tarojs/taro-h5": "^2.0.2",
     "alife-logger": "^1.8.1",
     "antd": "^3.26.11",
     "antd-mobile": "2.2.11",
@@ -116,7 +112,11 @@
   "peerDependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "@tarojs/taro-weapp": "1.3.14"
+    "@tarojs/taro-weapp": "1.3.14",
+    "@tarojs/components": "^2.0.4",
+    "@tarojs/redux": "^2.0.2",
+    "@tarojs/taro": "^2.0.2",
+    "@tarojs/taro-h5": "^2.0.2"
   },
   "repository": {
     "type": "git",
