fix: taro story

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,16 @@ env:
 
 jobs:
   include:
+    # Define the release stage that runs semantic-release
+    - stage: release
+      node_js: lts/*
+      # Advanced: optionally overwrite your default `script` step to skip the tests
+      script: 'npm run build'
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script: 'npx semantic-release'
+
     - stage: storybook
       node_js: lts/*
       script: 'npm run build-storybook'
@@ -23,14 +33,3 @@ jobs:
         fqdn: uni-user-story.pa-ca.me
         on:
           branch: master
-
-    # Define the release stage that runs semantic-release
-    - stage: release
-      node_js: lts/*
-      # Advanced: optionally overwrite your default `script` step to skip the tests
-      # script: skip
-      deploy:
-        provider: script
-        skip_cleanup: true
-        script:
-          - npx semantic-release
