--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "4.1.4",
     "webpack-visualizer-plugin": "^0.1.11",
-    "@tarojs/taro-h5": "^2.0.2"
+    "@tarojs/taro-h5": "^2.0.2",
+    "@tarojs/taro": "^2.0.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
