--- a/package.json
+++ b/package.json
@@ -90,9 +90,9 @@
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "4.1.4",
     "webpack-visualizer-plugin": "^0.1.11",
-    "@tarojs/taro-h5": "^2.0.2",
-    "@tarojs/taro": "^2.0.2",
-    "@tarojs/components": "^2.0.4"
+    "@tarojs/taro-h5": "1.3.22",
+    "@tarojs/taro": "1.3.22",
+    "@tarojs/components": "1.3.22"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
@@ -110,16 +110,17 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "@tarojs/redux": "1.3.22"
   },
   "peerDependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "@tarojs/taro-weapp": "1.3.14",
-    "@tarojs/components": "^2.0.4",
-    "@tarojs/redux": "^2.0.2",
-    "@tarojs/taro": "^2.0.2",
-    "@tarojs/taro-h5": "^2.0.2"
+    "@tarojs/taro-weapp": "1.3.22",
+    "@tarojs/components": "1.3.22",
+    "@tarojs/redux": "1.3.22",
+    "@tarojs/taro": "1.3.22",
+    "@tarojs/taro-h5": "1.3.22"
   },
   "repository": {
     "type": "git",
