--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "webpack-merge": "4.1.4",
     "webpack-visualizer-plugin": "^0.1.11",
     "@tarojs/taro-h5": "1.3.22",
+    "@tarojs/taro": "1.3.22",
     "@tarojs/components": "1.3.22"
   },
   "dependencies": {
