--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "local": "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "dev": "cross-env webpack-dev-server ---config webpack.dev.config.js",
-    "build": "cross-env CSS_LOADER_EXCLUDE_NODE_MODULES=false webpack&&cp src/containers/taro-container.tsx lib",
+    "build": "cross-env CSS_LOADER_EXCLUDE_NODE_MODULES=false webpack",
     "test": "mocha -r ./babel-register.js test/feature.test.ts --timeout=10000",
     "babel": "babel --presets @babel/preset-typescript test/feature.test.ts",
     "rollup": "rollup src/index.js --file lib/bundle.js --format umd --name uni-user",
@@ -88,10 +88,7 @@
     "webpack-dev-server": "^3.9.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "4.1.4",
-    "webpack-visualizer-plugin": "^0.1.11",
-    "@tarojs/taro-h5": "2.0.0",
-    "@tarojs/taro": "2.0.0",
-    "@tarojs/components": "2.0.0"
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
@@ -109,15 +106,11 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "@tarojs/redux": "2.0.0"
+    "redux-thunk": "^2.3.0"
   },
   "peerDependencies": {
     "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "@tarojs/components": "2.0.0",
-    "@tarojs/redux": "2.0.0",
-    "@tarojs/taro-h5": "2.0.0"
+    "react-dom": "16.8.6"
   },
   "repository": {
     "type": "git",
