--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "local": "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "dev": "cross-env webpack-dev-server ---config webpack.dev.config.js",
     "build": "cross-env CSS_LOADER_EXCLUDE_NODE_MODULES=false webpack",
-    "test": "mocha -r ./babel-register.js test/feature.test.ts --timeout=10000",
-    "babel": "babel --presets @babel/preset-typescript test/feature.test.ts",
+    "test": "cross-env NODE_ENV=unittest TS_NODE_TRANSPILE_ONLY=1 mocha --require espower-typescript/guess test/*.test.ts --timeout=10000",
+    "babel": "babel --presets @babel/preset-typescript test/*.test.ts",
     "rollup": "rollup src/index.js --file lib/bundle.js --format umd --name uni-user",
     "prepublishOnly": "cross-env NODE_ENV=production npm run build",
     "storybook": "cross-env CSS_LOADER_EXCLUDE_NODE_MODULES=true start-storybook -p 6006",
@@ -47,7 +47,7 @@
     "@types/babel-types": "7.0.7",
     "@types/mini-css-extract-plugin": "^0.9.0",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^13.7.0",
+    "@types/node": "^13.7.4",
     "autoprefixer": "9.5.1",
     "babel-loader": "8.0.5",
     "babel-plugin-import": "1.11.0",
@@ -59,6 +59,7 @@
     "css-loader": "2.1.1",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "1.6.0",
+    "espower-typescript": "^9.0.2",
     "file-loader": "3.0.1",
     "gh-pages": "^2.2.0",
     "html-webpack-plugin": "3.2.0",
@@ -69,6 +70,7 @@
     "mocha": "^6.2.2",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
+    "power-assert": "^1.6.1",
     "protobufjs": "6.8.8",
     "raw-loader": "2.0.0",
     "react": "16.8.6",
@@ -80,7 +82,7 @@
     "terser-webpack-plugin": "^1.2.1",
     "ts-import-plugin": "^1.6.2",
     "ts-loader": "^6.2.1",
-    "typescript": "latest",
+    "typescript": "^3.8.2",
     "url-loader": "1.1.2",
     "webpack": "4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
@@ -97,7 +99,9 @@
     "antd": "^3.26.11",
     "antd-mobile": "2.2.11",
     "crypto-js": "3.1.9-1",
+    "es6-promise": "^4.2.8",
     "google-libphonenumber": "3.2.2",
+    "isomorphic-fetch": "^2.2.1",
     "nerv-devtools": "^1.5.6",
     "nervjs": "^1.5.6",
     "phone": "2.3.10",
